Maintain datasource snapshot in HeapMemorySegmentMetadataCache